feat: crud de book
